Bug 158597 - FILEOPEN DOCX Numbering in specific file is unexpectedly bold
Summary: FILEOPEN DOCX Numbering in specific file is unexpectedly bold
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:7.6.6 target:24.2.2
Keywords:
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2023-12-08 14:44 UTC by Gabor Kelemen (Collabora)
Modified: 2024-03-01 10:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The example file in todays build (92.68 KB, image/png)
2023-12-08 14:44 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-12-08 14:44:27 UTC
Created attachment 191316 [details]
The example file in todays build

This is a followup to bug 154369 

When the example file attachment 186193 [details] is opened in Writer, the 1-4 numbering contains a bold formatting, but in Word they are not bold, as seen on the attachment 186194 [details] 

1. Open attachment 186193 [details]
2. Move the cursor into the 1-4 numbering
-> On the toolbar the bold formatting is seen activated

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5ff64bfcf9bb8c27670c4cb44a778105008407ed
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

and in all versions 7.0, 6.0, 5.0, 4.0, 3.3 - this was never good.
Comment 1 m_a_riosv 2023-12-09 00:01:23 UTC
Reproducible
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0ddd9f7e055a0c1ecb120de3e40c3fdb8373e9dc
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 Commit Notification 2024-02-15 16:33:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff9be3fd30ead41359734f9281b034a988d71196

tdf#158597 writerfilter,sw: fix toggle properties in ListAutoFormat

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2024-02-15 16:34:56 UTC
fixed on master
Comment 4 Commit Notification 2024-02-16 13:38:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d7754f81494ff8f360f67d3ad9e404dbab268df8

tdf#158597 writerfilter,sw: fix toggle properties in ListAutoFormat

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-03-01 10:59:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/5cef8d6e09f852671a412e39f8a3d4729302e28c

tdf#158597 writerfilter,sw: fix toggle properties in ListAutoFormat

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.