tdf#158597 writerfilter,sw: fix toggle properties in ListAutoFormat

... for DOCX import.

These can be set both via paragraph style and via character style in the
w:pPr/w:rPr, so use the applyToggleAttributes().

Adding a test for this requires adding the "CharStyleName" property to
GetAutoCharStylePropertyMap().

Change-Id: I9701d5ac82ec3e7757650c08861791dc398a1a77
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163386
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>